--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -44,8 +44,8 @@
             rel="noopener noreferrer">Crear
             cuenta</a>
     </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/aeKWZQPJjHg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
+ <a href="{% url 'accounts:acerca-de-mi' %}" target="_blank" rel="noopener noreferrer">acerca de mi</a>   
 
 
 
